# wasm-r3-2

./: .gitignore  Cargo.toml  README.md  index.html  research_test  research_test.rs  test_benchmark.rs  test_parser.rs  test_single  test_single.rs  wasm_parser.d.ts  wasm_parser.js  wasm_parser_bg.wasm.d.ts
.github/workflows/: deploy-web.yml
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/wasm_parser/: Cargo.toml
crates/wasm_parser/examples/: benchmark_test.rs  quick_test.rs
crates/wasm_parser/src/: ast.rs  decode.rs  decode_instructions.rs  encode.rs  error.rs  instruction.rs  leb128.rs  lib.rs  logger.rs  parser.rs  temp_fix.txt  types.rs  wasm_bindings.rs
crates/web/: Cargo.toml  index.html
crates/web/src/: main.rs
docs/: package.json  wasm_parser.js  wasm_parser_bg.wasm
src/: ast.rs  encode.rs  lib.rs  parser.rs  types.rs  value.rs
