[package]
name = "wasm_parser"
version = "0.1.0"
edition = "2021"
authors = ["WASM R3 Team"]
description = "A WebAssembly binary parser with editable AST structures"
license = "MIT"
repository = "https://github.com/marc-openclaw/wasm-r3-2"

[dependencies]
thiserror = "1.0"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]
anyhow = "1.0"

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys", "serde", "serde-wasm-bindgen"]

[lib]
crate-type = ["lib", "cdylib"]

[package.metadata.wasm]
# Enable wasm-bindgen weak references for smaller bundle size
weak-refs = true
