[package]
name = "wasm-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for WebAssembly module analysis"

[[bin]]
name = "wasm-cli"
path = "src/main.rs"

[dependencies]
wasm_parser = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
